# claude-codex

./: .gitignore  README.md  install.sh  pyproject.toml
docs/: architecture.md
src/claude_codex/: __init__.py  auth.py  launcher.py  proxy.py  translate.py
tests/: test_auth.py  test_installation_id.py  test_launcher.py  test_proxy.py  test_translate.py
