[project]
name = "claude-codex"
version = "0.1.0"
description = "Run Claude Code with a ChatGPT Codex subscription backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "uvicorn>=0.34,<1",
]

[project.scripts]
claude-codex = "claude_codex.launcher:main"
claude-codex-proxy = "claude_codex.proxy:main"

[dependency-groups]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.11,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
